# gather-fi

./: .dockerfile  Anchor.toml  Dockerfile  README.md  dockerfile  next.config.js  pack.json  package-lock.json  package.json  tailwind.config.js
.next/: react-loadable-manifest.json  trace
.next/cache/: config.json
.next/server/: _ed2e-_abbf.js  _error.js  middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/pages/: _error.js
.next/server/vendor-chunks/: @babel.js  @blocto.js  @coral-xyz.js  @ethereumjs.js  @ledgerhq.js  @noble.js  @project-serum.js  @socket.io.js  @solana-mobile.js  @solana.js  @solflare-wallet.js  @swc.js  @toruslabs.js  @wallet-standard.js  abort-controller.js  base-x.js  base64url.js  bignumber.js.js  bn.js.js  borsh.js  bowser.js  brorand.js  bs58.js  buffer-layout.js  bufferutil.js  call-bind-apply-helpers.js  call-bind.js  call-bound.js  camelcase.js  color-convert.js  color-name.js  color-string.js  color.js  cross-fetch.js  debug.js  define-data-property.js  dijkstrajs.js  elliptic.js  (+69 more)
app/: globals.css  layout.tsx  page.tsx
app/components/: CreateEventForm.tsx  EventCard.tsx  Footer.tsx  LoadingSpinner.tsx  Navbar.tsx  Toast.tsx  WalletBotton.tsx  WalletButton.tsx  WalletProvider.tsx
app/context/: EventContext.tsx
app/create/: page.tsx
app/dashboard/: page.tsx
app/lib/: anchor.ts
programs/gatherfi/: Cargo.toml
programs/gatherfi/src/: lib.rs
tests/: gatherfi.ts
(+36 files in other folders)
