[package]
name = "gatherfi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]  # Add anchor-spl/idl-build here
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dev-dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }